fixed spacing on contacts page and post page

--- a/pages/contact/contact.module.scss
+++ b/pages/contact/contact.module.scss
@@ -54,6 +54,9 @@ $socialWidth: 10em;
       min-width: 60px;
       min-height: 60px;
       margin-bottom: 50%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
