--- a/styles/global.scss
+++ b/styles/global.scss
@@ -222,10 +222,6 @@ ul {
   }
 }
 
-#post {
-  padding: 10px 20px;
-}
-
 @media screen and (max-width: 850px) {
   .alternating {
     display: flex;
